Fix problem that scrollbar appears

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,2 +1,5 @@
 /* Hide the mouse cursor */
 * { cursor: none !important }
+
+/* No scrollbars */
+body {overflow:hidden;}
